Partial commit. Changes include: - Removed world manager (to be replaced) - Added support for '*' in the CLI. - Reworked restart timer to actually work. - Changed some internals for (hopefully) better performance. - Removed out of date java8 options, since we require java8 anyway. - Removed permgen (java8 again). - Cleaned up some code.